--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ perl:
     - "5.10"
     - "5.8"
 before_install:
+  - export HELPERS_DEBUG=1 
   - git clone git://github.com/haarg/perl-travis-helper ~/perl-travis-helper
   - source ~/perl-travis-helper/init --auto
